Add to Swagger calculations, add logs
